crates/pgls_typecheck/tests/snapshots/create_table_as_invalid_relation.snap
---
source: crates/pgls_typecheck/tests/diagnostics.rs
assertion_line: 96
expression: content
---
CREATE TABLE t3 AS SELECT t.a FROM ~~~nonexistent_table~~~ AS t;

relation &quot;nonexistent_table&quot; does not exist
