crates/pgls_typecheck/tests/snapshots/create_table_as_valid.snap
---
source: crates/pgls_typecheck/tests/diagnostics.rs
assertion_line: 96
expression: content
---
No Diagnostic
