crates/pgls_typecheck/tests/snapshots/create_view_as_invalid_column.snap
---
source: crates/pgls_typecheck/tests/diagnostics.rs
assertion_line: 96
expression: content
---
CREATE VIEW v1 AS SELECT t.~~~nope~~~ FROM t;

column t.nope does not exist
