crates/pgls_typecheck/tests/snapshots/operator_does_not_exist.snap
---
source: crates/pgt_typecheck/tests/diagnostics.rs
expression: content
---
select ~~~is_active + product_name~~~ from public.products;

operator does not exist: boolean + unknown
