crates/pgls_typecheck/tests/snapshots/testing_type_with_multiple_words.snap
---
source: crates/pgt_typecheck/tests/diagnostics.rs
expression: content
---
select * from public.products where released = ~~~pid~~~;

`pid` is of type uuid, not timestamp with time zone
